--- a/src/Day1_HTML/FirstHTMLFile.html
+++ b/src/Day1_HTML/FirstHTMLFile.html
@@ -24,7 +24,7 @@
             Of all of Tiffany's artistic endeavors, stained glass brought him the greatest recognition.
         </blockquote>
 
-        <!-- <div> is used as a container to store elements and style them using css1 -->
+        <!-- <div> is used as a container to store elements and style them using css! -->
         <div style="background-color: blue;">
             <p style="color: white;">Testing div tag in html!</p>
             <p>Testing div tag in html!</p>
