--- a/src/Day2_HTML/Task/PersonalInformation.html
+++ b/src/Day2_HTML/Task/PersonalInformation.html
@@ -19,6 +19,24 @@
     <label for="phoneInput">Phone Number:</label>
     <input type="number" id="phoneInput"> <br>
 
+    <label for="textArea">Description</label>
+    <textarea rows="20" cols="40" id="textArea"></textarea> <br>
+
+    <label for="checkbox">Agree?</label>
+    <input type="checkbox" id="checkbox"> <br>
+
+    <label for="radioButton1">Male</label>
+    <input type="radio" id="radioButton1" name="Gender" checked>
+
+    <label for="radioButton2">Female</label>
+    <input type="radio" id="radioButton2" name="Gender"> <br>
+
+    <p>Select your city:</p>
+    <select name="City">
+        <option value="Brooklyn">Brooklyn</option>
+        <option value="Boston">Boston</option>
+    </select> <br>
+
     <input type="submit">
 
 </form>
