--- a/src/Day3/descendants/index.html
+++ b/src/Day3/descendants/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>index</title>
 
-  <style>
-    div[class='one1'] > p { background: yellow; }
-  </style>
+    <style>
+      #xot-container p { background: red }
+    </style>
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 </div>
 
 <div id="xoch-container">
-  <div class="one1">
+  <div class="one">
     <p> My paragraph here. </p>
   </div>
 
